actualización de lanzamiento

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ header{
     width: 100%;
     display: none;
     align-items: center;
+    text-align: center;
     justify-content: center;
 }
 
